add router and fix header

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://www.flaticon.com/svg/vstatic/svg/686/686458.svg?token=exp=1619272196~hmac=fd2381ea0126d38da3ab93f33507f376"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -41,8 +44,7 @@
     />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="%PUBLIC_URL%/css/styles.css" rel="stylesheet" />
-    -->
-    <title>React App</title>
+    <title>Movie App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
